--- a/app/src/main/res/layout/layout_item_call_history.xml
+++ b/app/src/main/res/layout/layout_item_call_history.xml
@@ -15,25 +15,23 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_marginBottom="5dp"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="5dp">
 
-      <LinearLayout
-          android:id="@+id/profile_contact"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent"
-          app:layout_constraintBottom_toBottomOf="parent"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content">
-          <de.hdodenhof.circleimageview.CircleImageView
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:id="@+id/profile_image"
-              android:layout_width="60dp"
-              android:layout_height="60dp"
-              android:src="@drawable/ic_launcher_background"
-              app:civ_border_width="2dp"
-              app:civ_border_color="#FF000000"/>
-      </LinearLayout>
+        <LinearLayout
+            android:id="@+id/profile_contact"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/profile_image"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/ic_launcher_background" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/txt_Contact_name"
@@ -41,9 +39,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
+            android:fontFamily="sans-serif-condensed-medium"
             android:textColor="@color/black"
             android:textSize="14sp"
-            android:fontFamily="sans-serif-condensed-medium"
             app:layout_constraintStart_toEndOf="@+id/profile_contact"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:fontFamily="sans-serif-condensed-medium"
+            android:fontFamily="sans-serif-smallcaps"
             android:textColor="@color/black"
             android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@+id/profile_contact"
@@ -75,10 +73,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:fontFamily="sans-serif-medium"
             android:textColor="@color/black"
             android:textSize="12sp"
-            android:fontFamily="sans-serif-medium"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txt_Contact_type"
             app:layout_constraintTop_toBottomOf="@+id/txt_Contact_number" />
 
@@ -88,39 +86,42 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
+            android:fontFamily="sans-serif-medium"
             android:textColor="@color/black"
             android:textSize="12sp"
-            android:fontFamily="sans-serif-medium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txt_Contact_date"
             app:layout_constraintTop_toBottomOf="@+id/txt_Contact_number" />
+
         <TextView
             android:id="@+id/txt_Contact_simtype"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
+            android:fontFamily="sans-serif-medium"
             android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="12sp"
-            android:fontFamily="sans-serif-medium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/txt_Contact_duration"
             app:layout_constraintTop_toBottomOf="@+id/txt_Contact_number" />
+
         <LinearLayout
 
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/layout_call"
-            android:layout_marginEnd="10dp"
             android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginEnd="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_height="0dp">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
             <ImageView
                 android:layout_width="wrap_content"
-                android:src="@android:drawable/ic_menu_call"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:src="@android:drawable/ic_menu_call"
                 app:tint="@color/black">
 
             </ImageView>
