--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/CallHistoryFragment">
     <fragment
         android:id="@+id/CallHistoryFragment"
         android:name="com.cartravelsdailerapp.ui.fragments.CallHistoryFragment"
