search is added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,13 +21,13 @@
         android:id="@+id/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cbn_background="@color/purple_500"
-        app:cbn_curve_radius="50dp"
-        app:cbn_fabColor="@color/purple_500"
-        app:cbn_height="70dp"
+        app:cbn_background="@color/orange"
+        app:cbn_curve_radius="40dp"
+        app:cbn_fabColor="@color/white"
+        app:cbn_height="65dp"
         app:cbn_iconColor="@color/white"
-        app:cbn_selectedIconColor="@color/white"
-        app:cbn_selected_icon_size="48dp"
+        app:cbn_selectedIconColor="@color/orange"
+        app:cbn_selected_icon_size="50dp"
         app:cbn_titleColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
