--- a/app/src/main/res/drawable/ic_call.xml
+++ b/app/src/main/res/drawable/ic_call.xml
@@ -1,15 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="800dp"
     android:height="800dp"
-    android:viewportWidth="18.6"
-    android:viewportHeight="18.6">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M0,0h18.6v18.6h-18.6z"
-      android:strokeWidth="0"
-      android:fillColor="#FFFFFF"/>
-  <path
-      android:pathData="M16.53,14.796C16.067,16.203 14.253,16.905 12.957,16.788C11.187,16.628 9.261,15.689 7.799,14.655C5.65,13.135 3.637,10.784 2.464,8.289C1.635,6.526 1.449,4.358 2.682,2.751C3.138,2.157 3.631,1.84 4.372,1.803C5.4,1.753 5.544,2.341 5.897,3.257C6.16,3.942 6.511,4.641 6.707,5.351C7.074,6.676 5.791,6.731 5.629,7.814C5.528,8.497 6.356,9.413 6.73,9.9C7.463,10.854 8.344,11.677 9.338,12.303C9.907,12.662 10.826,13.309 11.478,12.952C12.482,12.402 12.387,10.709 13.791,11.282C14.518,11.578 15.222,12.005 15.916,12.379C16.989,12.956 16.939,13.554 16.53,14.796C16.224,15.724 16.836,13.868 16.53,14.796"
-      android:strokeWidth="0.12"
-      android:fillColor="#ee5502"
-      android:fillType="evenOdd"/>
+      android:pathData="M9,16C2.814,9.813 3.11,5.134 5.94,3.012l0.627,-0.467a1.483,1.483 0,0 1,2.1 0.353l1.579,2.272a1.5,1.5 0,0 1,-0.25 1.99L8.476,8.474c-0.38,0.329 -0.566,0.828 -0.395,1.301 0.316,0.88 1.083,2.433 2.897,4.246 1.814,1.814 3.366,2.581 4.246,2.898 0.474,0.17 0.973,-0.015 1.302,-0.396l1.314,-1.518a1.5,1.5 0,0 1,1.99 -0.25l2.276,1.58a1.48,1.48 0,0 1,0.354 2.096l-0.47,0.633C19.869,21.892 15.188,22.187 9,16z"
+      android:fillColor="#000000"/>
 </vector>
