--- a/app/src/main/res/layout/layout_item_call_history.xml
+++ b/app/src/main/res/layout/layout_item_call_history.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="80dp"
     android:layout_margin="5dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp"
@@ -18,17 +18,19 @@
 
         <LinearLayout
             android:id="@+id/profile_contact"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:background="#E0E0E0"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/profile_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleType="fitXY"
+                android:layout_width="50dp"
+                android:layout_gravity="center"
+                android:layout_height="50dp"
                 android:src="@drawable/userprofile" />
         </LinearLayout>
 
@@ -117,7 +119,7 @@
                 android:fontFamily="sans-serif-medium"
                 android:text="1"
                 android:textAllCaps="true"
-                android:textColor="@color/orange"
+                android:textColor="@color/black"
                 android:textSize="12sp" />
 
             <ImageView
@@ -135,7 +137,7 @@
             android:id="@+id/layout_call"
             android:layout_width="50dp"
             android:layout_height="0dp"
-            android:background="@color/white"
+            android:background="#E0E0E0"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -146,6 +148,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:padding="10dp"
+                android:backgroundTint="#E0E0E0"
                 android:src="@drawable/ic_call" />
         </LinearLayout>
 
