Ui Changes and revers the data on lower environments in list

--- a/app/src/main/res/layout/fragment_call_history.xml
+++ b/app/src/main/res/layout/fragment_call_history.xml
@@ -6,15 +6,15 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent">
 
         <LinearLayout
             android:id="@+id/layout_toolbar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_margin="5dp"
+            android:layout_marginTop="10dp"
             android:background="@color/white"
-
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -27,12 +27,12 @@
             <androidx.appcompat.widget.SearchView
                 android:id="@+id/search_contacts"
                 android:layout_width="0dp"
-                android:padding="10dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                app:iconifiedByDefault="false"
                 android:background="@drawable/bg_shape_rect_orange"
+                android:padding="5dp"
                 android:searchSuggestThreshold="2"
+                app:iconifiedByDefault="false"
                 app:queryHint="Search Your Name"
                 app:searchHintIcon="@null" />
 
@@ -40,21 +40,53 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:padding="5dp"
-                android:src="@drawable/userprofile"
-                android:visibility="invisible" />
+                android:rotation="270"
+                android:src="@drawable/ic_setting" />
+
 
         </LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_call_history"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="50dp"
-            android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar" />
+            app:layout_constraintTop_toBottomOf="@+id/layout_toolbar">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_call_history"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dp"
+                app:layout_constraintBottom_toTopOf="@+id/fab_button"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/fab_button"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerInParent="true"
+                android:layout_marginBottom="80dp"
+                android:elevation="10dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="70dp"
+                app:cardElevation="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/recycler_view_call_history">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_dial_pad" />
+            </androidx.cardview.widget.CardView>
+
+        </RelativeLayout>
+        <!--        app:layout_constraintBottom_toTopOf="@+id/fab_button"-->
 
         <TextView
             android:id="@+id/txt_nodata_found"
@@ -77,5 +109,28 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <!--
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/fab_button"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:elevation="10dp"
+                    android:layout_marginBottom="40dp"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="70dp"
+                    app:cardElevation="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/recycler_view_call_history">
+
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:src="@drawable/ic_dial_pad" />
+                </androidx.cardview.widget.CardView>
+        -->
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
