--- a/app/src/main/res/layout/layout_item_call_history.xml
+++ b/app/src/main/res/layout/layout_item_call_history.xml
@@ -69,7 +69,7 @@
             android:layout_height="20dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/arrow_red"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/profile_contact"
             app:layout_constraintTop_toBottomOf="@+id/txt_Contact_number" />
