--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,8 @@
         <item name="android:background">@drawable/dialer_btn_ripple</item>
         <item name="android:gravity">center</item>
     </style>
+    <style name="popup_window_animation">
+        <item name="android:windowEnterAnimation">@anim/popup_anim</item>
+        <item name="android:windowExitAnimation">@anim/popdown_anim</item>
+    </style>
 </resources>
