--- a/app/src/main/res/layout/layout_item_call_history.xml
+++ b/app/src/main/res/layout/layout_item_call_history.xml
@@ -68,6 +68,17 @@
                 android:textSize="14sp"
                 app:layout_constraintStart_toEndOf="@+id/profile_contact"
                 app:layout_constraintTop_toBottomOf="@+id/txt_Contact_name" />
+            <TextView
+                android:id="@+id/txt_Contact_number_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:fontFamily="sans-serif-smallcaps"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:layout_constraintStart_toEndOf="@+id/txt_Contact_number"
+                app:layout_constraintTop_toBottomOf="@+id/txt_Contact_name" />
 
             <ImageView
                 android:id="@+id/txt_Contact_type"
