--- a/app/src/main/res/layout/layout_item_call_history.xml
+++ b/app/src/main/res/layout/layout_item_call_history.xml
@@ -245,7 +245,7 @@
                         <ImageView
                             android:layout_width="30dp"
                             android:layout_height="30dp"
-                            android:src="@drawable/ic_whatsapp"
+                            android:src="@drawable/ic_whatsapp_black"
                             app:tint="@color/white" />
 
                     </androidx.cardview.widget.CardView>
