--- a/app/src/main/res/layout/popup_layout.xml
+++ b/app/src/main/res/layout/popup_layout.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="20dp"
     android:layout_margin="10dp"
-    app:cardBackgroundColor="@color/orange"
+    app:cardCornerRadius="20dp"
     app:contentPadding="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,14 +19,14 @@
             app:layout_constraintStart_toStartOf="parent"
 
             app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/white" />
+            />
 
         <TextView
             android:id="@+id/txt_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/go_to"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
 
             android:textSize="20sp"
             android:textStyle="bold"
@@ -36,10 +35,10 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
-            android:layout_marginTop="10dp"
             android:id="@+id/layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_title">
@@ -48,52 +47,50 @@
                 android:id="@+id/image_whatsapp"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
-                android:layout_weight="2"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_whatsapp"
-                app:tint="@color/white" />
+                android:layout_weight="2"
+                android:src="@drawable/ic_whatsapp" />
 
             <ImageView
                 android:id="@+id/image_whatsapp_bussiness"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="2"
-                android:src="@drawable/ic_whatsapp"
-                app:tint="@color/white" />
+                android:src="@drawable/whatsapp_business" />
 
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/layout2"
-            android:layout_marginTop="10dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layout">
 
             <TextView
+                android:id="@+id/txt_whatsapp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:id="@+id/txt_whatsapp"
-               android:textAlignment="center"
+                android:text="@string/personal"
 
-                android:textSize="18sp"
-                android:textColor="@color/white"
-                android:text="Personal" />
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/txt_whatsapp_bussiness"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:gravity="center"
-                android:id="@+id/txt_whatsapp_bussiness"
 
-                android:textSize="18sp"
-                android:textColor="@color/white"
-                android:text="Bussiness" />
+                android:text="@string/bussiness"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
