--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -131,7 +131,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/txt_signUp"
@@ -158,13 +159,14 @@
 
             <Button
                 android:id="@+id/bt_login"
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
                 android:fontFamily="sans-serif-medium"
-                android:text="@string/login"
+                android:text="@string/next"
+                android:textSize="18sp"
                 android:textAllCaps="false" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
