--- a/app/src/main/res/layout/layout_item_call_history.xml
+++ b/app/src/main/res/layout/layout_item_call_history.xml
@@ -34,10 +34,10 @@
 
                 <QuickContactBadge
                     android:id="@+id/profile_image"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
                     android:layout_gravity="center"
-                    android:scaleType="fitXY"
+                    android:scaleType="fitCenter"
                     android:src="@drawable/userprofile" />
 
             </LinearLayout>
